# openvino_costum_cnn_cpp

./: .gitignore  CMakeLists.txt  README.md  build.bat  commands_for_runtime_paths.txt  main.cpp  traffic_sign_cnn_212_openvino.xml
